jellyseerr/01-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyseerr-service
  namespace: p2p
spec:
  selector:
    app: jellyseerr
  ports:
  - port: 5055
    targetPort: 5055
    name: web
    protocol: TCP
  type: ClusterIP
