jellyseerr/02-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingress
  namespace: p2p
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - match: Host(`jellyseerr.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: jellyseerr-service
      port: web
